; ModuleID = '/home/carl/AnghaBench/git/compat/extr_mkdir.c_compat_mkdir_wo_trailing_slash.c'
source_filename = "/home/carl/AnghaBench/git/compat/extr_mkdir.c_compat_mkdir_wo_trailing_slash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @compat_mkdir_wo_trailing_slash(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* null, i8** %7, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i64 @strlen(i8* %9)
  store i64 %10, i64* %8, align 8
  %11 = load i64, i64* %8, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %31

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %8, align 8
  %16 = sub i64 %15, 1
  %17 = getelementptr inbounds i8, i8* %14, i64 %16
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 47
  br i1 %20, label %21, label %31

21:                                               ; preds = %13
  %22 = load i8*, i8** %4, align 8
  %23 = call i8* @strdup(i8* %22)
  store i8* %23, i8** %7, align 8
  %24 = icmp eq i8* %23, null
  br i1 %24, label %25, label %26

25:                                               ; preds = %21
  store i32 -1, i32* %3, align 4
  br label %45

26:                                               ; preds = %21
  %27 = load i8*, i8** %7, align 8
  %28 = load i64, i64* %8, align 8
  %29 = sub i64 %28, 1
  %30 = getelementptr inbounds i8, i8* %27, i64 %29
  store i8 0, i8* %30, align 1
  br label %33

31:                                               ; preds = %13, %2
  %32 = load i8*, i8** %4, align 8
  store i8* %32, i8** %7, align 8
  br label %33

33:                                               ; preds = %31, %26
  %34 = load i8*, i8** %7, align 8
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @mkdir(i8* %34, i32 %35)
  store i32 %36, i32* %6, align 4
  %37 = load i8*, i8** %7, align 8
  %38 = load i8*, i8** %4, align 8
  %39 = icmp ne i8* %37, %38
  br i1 %39, label %40, label %43

40:                                               ; preds = %33
  %41 = load i8*, i8** %7, align 8
  %42 = call i32 @free(i8* %41)
  br label %43

43:                                               ; preds = %40, %33
  %44 = load i32, i32* %6, align 4
  store i32 %44, i32* %3, align 4
  br label %45

45:                                               ; preds = %43, %25
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @mkdir(i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
